[gd_scene load_steps=26 format=3 uid="uid://l0bs5d5chsgh"]

[ext_resource type="Script" path="res://src/grandma/grandma.gd" id="1_8yr8d"]
[ext_resource type="Texture2D" uid="uid://dhssdf6ldn8gu" path="res://assets/gfx/grandma/grandma-bg.png" id="2_feod5"]
[ext_resource type="PackedScene" uid="uid://nob8fbq77y0a" path="res://src/grandma/cannon.tscn" id="3_4nk1i"]
[ext_resource type="Texture2D" uid="uid://glj5vpbxurxj" path="res://assets/gfx/grandma/grandma-fg.png" id="4_l15ix"]
[ext_resource type="PackedScene" uid="uid://bo160ji4aulmn" path="res://src/grandma/cake/dessert_sprite.tscn" id="4_ungno"]
[ext_resource type="FontFile" uid="uid://bq8pv3ex6ljl6" path="res://assets/fonts/Heyho-Regular.ttf.otf" id="5_gr3i2"]
[ext_resource type="PackedScene" uid="uid://xi421nvx1edp" path="res://src/grandma/SpeechBubble.tscn" id="6_tanuc"]
[ext_resource type="AudioStream" uid="uid://flicmrpvks0y" path="res://assets/sfx/Changing_Ammo_1.wav" id="7_nhuoc"]
[ext_resource type="AudioStream" uid="uid://c5pcpxpmi3wap" path="res://assets/sfx/Changing_Ammo_2.wav" id="8_2lvwb"]
[ext_resource type="AudioStream" uid="uid://tcf3p6y6ttts" path="res://assets/sfx/Changing_Ammo_3.wav" id="9_m2465"]
[ext_resource type="AudioStream" uid="uid://5p2oykohuu57" path="res://assets/sfx/Grandma_Footstep_1.wav" id="10_l2id5"]
[ext_resource type="AudioStream" uid="uid://cymfrgvnxmknb" path="res://assets/sfx/Grandma_Footstep_2.wav" id="11_dkyjs"]
[ext_resource type="AudioStream" uid="uid://cl1gfge70i2ej" path="res://assets/sfx/Grandma_Footstep_3.wav" id="12_eg0bq"]
[ext_resource type="AudioStream" uid="uid://b3f4xixhaf5sj" path="res://assets/sfx/Canon_adjust_loop.wav" id="13_tjhnb"]
[ext_resource type="AudioStream" uid="uid://m21h6061kdfw" path="res://assets/sfx/Grandma_voice_1.wav" id="15_25gpk"]
[ext_resource type="AudioStream" uid="uid://b3neoq4clpitp" path="res://assets/sfx/Grandma_voice_2.wav" id="16_pep3d"]
[ext_resource type="AudioStream" uid="uid://xi8cb2mvbg12" path="res://assets/sfx/Grandma_voice_3.wav" id="17_kpdam"]
[ext_resource type="AudioStream" uid="uid://bkjmdhdbc7aqf" path="res://assets/sfx/Grandma_voice_4.wav" id="18_piiqq"]
[ext_resource type="AudioStream" uid="uid://tsiriw8de12e" path="res://assets/sfx/Grandma_voice_5.wav" id="19_vlrif"]
[ext_resource type="AudioStream" uid="uid://dejhx8gki58f5" path="res://assets/sfx/Grandma_voice_6.wav" id="20_mi8ou"]
[ext_resource type="AudioStream" uid="uid://cp3p4tj4c006i" path="res://assets/sfx/Grandma_voice_7.wav" id="21_u3gws"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0ipl"]
size = Vector2(251.5, 163)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a7hwe"]
streams_count = 3
stream_0/stream = ExtResource("7_nhuoc")
stream_1/stream = ExtResource("8_2lvwb")
stream_2/stream = ExtResource("9_m2465")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_u7f4h"]
streams_count = 3
stream_0/stream = ExtResource("10_l2id5")
stream_1/stream = ExtResource("11_dkyjs")
stream_2/stream = ExtResource("12_eg0bq")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yu4oq"]
streams_count = 7
stream_0/stream = ExtResource("15_25gpk")
stream_1/stream = ExtResource("16_pep3d")
stream_2/stream = ExtResource("17_kpdam")
stream_3/stream = ExtResource("18_piiqq")
stream_4/stream = ExtResource("19_vlrif")
stream_5/stream = ExtResource("20_mi8ou")
stream_6/stream = ExtResource("21_u3gws")

[node name="Grandma" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_8yr8d")

[node name="GrandmaBackground" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -160)
texture = ExtResource("2_feod5")

[node name="Cannon" type="Node2D" parent="."]

[node name="MaxAngle" type="Marker2D" parent="Cannon"]
position = Vector2(44, -425)

[node name="MinAngle" type="Marker2D" parent="Cannon"]
position = Vector2(450, -38)

[node name="CannonBarrel" parent="Cannon" instance=ExtResource("3_4nk1i")]
unique_name_in_owner = true
position = Vector2(145, -66)
rotation = 1.1973

[node name="DessertSprite" parent="." instance=ExtResource("4_ungno")]
unique_name_in_owner = true
position = Vector2(-132, -148)

[node name="AmmoCounter" type="Node2D" parent="."]
position = Vector2(-183, -230)

[node name="AmmoLabel" type="Label" parent="AmmoCounter"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_gr3i2")
theme_override_font_sizes/font_size = 64
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="GrandmaForeground" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -160)
texture = ExtResource("4_l15ix")

[node name="StandDetector" type="Area2D" parent="."]
position = Vector2(0, -227)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StandDetector"]
shape = SubResource("RectangleShape2D_r0ipl")

[node name="SpeechBubble" parent="." instance=ExtResource("6_tanuc")]
position = Vector2(272, -304)

[node name="reload_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_a7hwe")
bus = &"Sound"

[node name="walk_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_u7f4h")
bus = &"Sound"

[node name="cannon_rotate_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_tjhnb")
bus = &"Sound"

[node name="giggle_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_yu4oq")
bus = &"Sound"
